Fixing quickedit overflow, styling, trigger link width

--- a/admin/assets/less/admin/legacy.less
+++ b/admin/assets/less/admin/legacy.less
@@ -54,12 +54,9 @@
 #carch #mura-content #gridContainer ul.breadcrumb{
   float: left;
 }
-#tabArchitectural #gridContainer .overflow-wrap{
-  /*  
-  overflow-x: auto;
-  overflow-y: hidden; 
-  */
-}  
+#tabArchitectural .block-header + .block-content{ 
+  overflow: visible; 
+}
 #tabArchitectural #gridContainer dl {
   width: 100%;
   float: none;
