--- a/admin/assets/less/admin/mura-grid.less
+++ b/admin/assets/less/admin/mura-grid.less
@@ -1911,8 +1911,7 @@
 
 	.mura-quickEditItem {
 		cursor: pointer;
-		/* border-bottom: 1px dotted; */
-
+		padding: 3px 12px;
 		i {
 			color: @iconColor;
 			}
